CSS Bug Temp-Fixed
main.scss
L171 + L172

Height + Width adjusted to 99% to fit browser, 100% slightly too big and
has extra space on bottom and right, not sure what happened with the
extra one percent...

--- a/app/Main.scss
+++ b/app/Main.scss
@@ -75,7 +75,6 @@ body {
 #chattoplevel {
   background-color: $chattoplevel-bg;
   border-left: 5px solid #73AD21;
-  border-bottom: 5px solid #73AD21;
   position: relative;
   height: 100%;
   overflow: hidden;
@@ -169,7 +168,8 @@ body {
 //
 
 div#app > div {
-  height: 100%;
+  height: 99%;
+  width: 99%;
 
 }
 
